// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourcesTree After changing expanded nodes Shows the tree with four.js, five.js and six.js expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      expanded={
        Array [
          "four.js",
          "five.js",
          "six.js",
        ]
      }
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;

exports[`SourcesTree Should show a 'No Sources' message if there are no sources 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="no-sources-message"
    key="empty"
  >
    This page has no sources.
  </div>
</div>
`;

exports[`SourcesTree Should show the tree with nothing expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;

exports[`SourcesTree When loading initial source Shows the tree with one.js, two.js and three.js expanded 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      expanded={
        Array [
          "one.js",
          "two.js",
          "three.js",
        ]
      }
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;

exports[`SourcesTree on receiving new props updates highlighted items updates highlightItems if selectedSource changes 1`] = `
<div
  className="sources-pane"
  key="pane"
>
  <div
    className="sources-list"
    key="tree"
  >
    <ManagedTree
      autoExpandAll={false}
      autoExpandDepth={1}
      getChildren={[Function]}
      getParent={[Function]}
      getPath={[Function]}
      getRoots={[Function]}
      highlightItems={
        Array [
          Object {
            "contents": Object {
              "extensionName": null,
              "id": "server1.conn13.child1/41",
              "introductionType": undefined,
              "introductionUrl": null,
              "isBlackBoxed": false,
              "isExtension": false,
              "isPrettyPrinted": false,
              "isWasm": false,
              "relativeUrl": "http://mdn.com/three.js",
              "sourceMapURL": null,
              "url": "http://mdn.com/three.js",
            },
            "name": "three.js",
            "path": "FakeThread/mdn.com/three.js",
            "type": "source",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Object {
                  "extensionName": null,
                  "id": "server1.conn13.child1/42",
                  "introductionType": undefined,
                  "introductionUrl": null,
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "relativeUrl": "http://mdn.com/four.js",
                  "sourceMapURL": "data:application/json?charset=utf?dsffewrsf",
                  "url": "http://mdn.com/four.js",
                },
                "name": "four.js",
                "path": "FakeThread/mdn.com/four.js",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "extensionName": null,
                  "id": "server1.conn13.child1/42/originalSource-sha",
                  "introductionType": undefined,
                  "introductionUrl": null,
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "relativeUrl": "http://mdn.com/four.js",
                  "sourceMapURL": null,
                  "url": "http://mdn.com/four.js",
                },
                "name": "four.js",
                "path": "FakeThread/mdn.com/four.js",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "extensionName": null,
                  "id": "server1.conn13.child1/39",
                  "introductionType": undefined,
                  "introductionUrl": null,
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "relativeUrl": "http://mdn.com/one.js",
                  "sourceMapURL": null,
                  "url": "http://mdn.com/one.js",
                },
                "name": "one.js",
                "path": "FakeThread/mdn.com/one.js",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "extensionName": null,
                  "id": "server1.conn13.child1/41",
                  "introductionType": undefined,
                  "introductionUrl": null,
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "relativeUrl": "http://mdn.com/three.js",
                  "sourceMapURL": null,
                  "url": "http://mdn.com/three.js",
                },
                "name": "three.js",
                "path": "FakeThread/mdn.com/three.js",
                "type": "source",
              },
              Object {
                "contents": Object {
                  "extensionName": null,
                  "id": "server1.conn13.child1/40",
                  "introductionType": undefined,
                  "introductionUrl": null,
                  "isBlackBoxed": false,
                  "isExtension": false,
                  "isPrettyPrinted": false,
                  "isWasm": false,
                  "relativeUrl": "http://mdn.com/two.js",
                  "sourceMapURL": null,
                  "url": "http://mdn.com/two.js",
                },
                "name": "two.js",
                "path": "FakeThread/mdn.com/two.js",
                "type": "source",
              },
            ],
            "name": "mdn.com",
            "path": "FakeThread/mdn.com",
            "type": "directory",
          },
          Object {
            "contents": Array [
              Object {
                "contents": Array [
                  Object {
                    "contents": Object {
                      "extensionName": null,
                      "id": "server1.conn13.child1/42",
                      "introductionType": undefined,
                      "introductionUrl": null,
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "relativeUrl": "http://mdn.com/four.js",
                      "sourceMapURL": "data:application/json?charset=utf?dsffewrsf",
                      "url": "http://mdn.com/four.js",
                    },
                    "name": "four.js",
                    "path": "FakeThread/mdn.com/four.js",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "extensionName": null,
                      "id": "server1.conn13.child1/42/originalSource-sha",
                      "introductionType": undefined,
                      "introductionUrl": null,
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "relativeUrl": "http://mdn.com/four.js",
                      "sourceMapURL": null,
                      "url": "http://mdn.com/four.js",
                    },
                    "name": "four.js",
                    "path": "FakeThread/mdn.com/four.js",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "extensionName": null,
                      "id": "server1.conn13.child1/39",
                      "introductionType": undefined,
                      "introductionUrl": null,
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "relativeUrl": "http://mdn.com/one.js",
                      "sourceMapURL": null,
                      "url": "http://mdn.com/one.js",
                    },
                    "name": "one.js",
                    "path": "FakeThread/mdn.com/one.js",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "extensionName": null,
                      "id": "server1.conn13.child1/41",
                      "introductionType": undefined,
                      "introductionUrl": null,
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "relativeUrl": "http://mdn.com/three.js",
                      "sourceMapURL": null,
                      "url": "http://mdn.com/three.js",
                    },
                    "name": "three.js",
                    "path": "FakeThread/mdn.com/three.js",
                    "type": "source",
                  },
                  Object {
                    "contents": Object {
                      "extensionName": null,
                      "id": "server1.conn13.child1/40",
                      "introductionType": undefined,
                      "introductionUrl": null,
                      "isBlackBoxed": false,
                      "isExtension": false,
                      "isPrettyPrinted": false,
                      "isWasm": false,
                      "relativeUrl": "http://mdn.com/two.js",
                      "sourceMapURL": null,
                      "url": "http://mdn.com/two.js",
                    },
                    "name": "two.js",
                    "path": "FakeThread/mdn.com/two.js",
                    "type": "source",
                  },
                ],
                "name": "mdn.com",
                "path": "FakeThread/mdn.com",
                "type": "directory",
              },
            ],
            "name": "FakeThread",
            "path": "FakeThread",
            "type": "directory",
          },
        ]
      }
      itemHeight={21}
      key="full"
      onActivate={[Function]}
      onCollapse={[Function]}
      onExpand={[Function]}
      onFocus={[Function]}
      preventBlur={true}
      renderItem={[Function]}
    />
  </div>
</div>
`;
